5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1592_1805.log
== SUBMITION (2019-03-27 14:30:31) 
-- CODE:
xA = float(input())
yA = float(input())
xB = float(input())
yB = float(input())

xm = (Xb+Xa)/ 2
ym = (Yb+Ya)/ 2

round(xm,n)
round(ym,n)


-- EXECUTION TIME:
0.182892
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1805/main.py", line 6, in <module>
    xm = (Xb+Xa)/ 2
NameError: name 'Xb' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:30:47) 
-- CODE:
xA = float(input())
yA = float(input())
xB = float(input())
yB = float(input())

xm = ((Xb+Xa)/ 2)
ym = ((Yb+Ya)/ 2)

round(xm,n)
round(ym,n)


-- EXECUTION TIME:
0.151944
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1805/main.py", line 6, in <module>
    xm = ((Xb+Xa)/ 2)
NameError: name 'Xb' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:32:22) 
-- CODE:
xA = float(input())
yA = float(input())
xB = float(input())
yB = float(input())

xm = ((xB+xA)/ 2)
ym = ((yB+yA)/ 2)

round(xm,1)
round(ym,1)


-- EXECUTION TIME:
0.114035
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:

-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:

-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:33:19) 
-- CODE:
xA = float(input())
yA = float(input())
xB = float(input())
yB = float(input())

xm = ((xB+xA)/ 2)
ym = ((yB+yA)/ 2)

print(round(xm,1))
print(round(ym,1))


-- EXECUTION TIME:
0.134788
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
